--- a/report/paper-refs.bib
+++ b/report/paper-refs.bib
@@ -18,6 +18,12 @@
 	pages = {10-9},
 	Year = {2001},}
 
+@book{Monesi,
+	Author = {Monesi, V },
+	Publisher = {Piccin},
+	Title = {Istologia},
+	pages = {270-280},
+	Year = {2012},}
 
 @Article{Doktor:2011,
 	author =   {Doktor, Tomáš and Valach, Jaroslav and Kytyr, Dan and Jiroušek, Ondřej},
