--- a/report/paper-refs.bib
+++ b/report/paper-refs.bib
@@ -25,15 +25,55 @@
 	pages = {270-280},
 	Year = {2012},}
 
-@Article{Doktor:2011,
-	author =   {Doktor, Tomáš and Valach, Jaroslav and Kytyr, Dan and Jiroušek, Ondřej},
-	title =    {Pore Size Distribution of Human Trabecular Bone - Comparison of Intrusion Measurements with Image Analysis},
-	journal =      {Engineering Mechanics},
-	year =     {2011},
-	volume =   {Mat},
-	pages =    {},
+@Article{Ferguson:2003,
+	author =   {Ferguson, Stephen J, and Thomas Steffen},
+	title =    {Biomechanics of the aging spine},
+	journal =      {European spine journal },
+	year =     {2003},
+	volume =   {12},
+	pages =    {S97-S103},
+}
+
+
+
+
+@Article{Silva:1997,
+	author =   {Silva, M. J. and Keaveny, T. M. and Hayes, W. C.},
+	title =    {Load sharing between the shell and centrum in the lumbar vertebral body.},
+	journal =      {Spine},
+	year =     {1997},
+	volume =   {22,2},
+	pages =    {140-50},
+}
+
+@inproceedings{Doktor:2011,
+	author = {Doktor, Tomáš and Valach, Jaroslav and Kytyr, Dan and Jiroušek, Ondřej},
+	year = {2011},
+	month = {01},
+	pages = {115-118},
+	title = {Pore Size Distribution of Human Trabecular Bone - Comparison of Intrusion Measurements with Image Analysis}
+}
+
+
+
+
+@Article{Keller:1989,
+	author =  { Keller, T. S. and Hansson, T. H. and Abram, A. C. and Spengler, D. M. and Panjabi, M.},
+	title =    {Regional variations in the compressive properties of lumbar vertebral trabeculae. Effects of disc degeneration.},
+	journal =      {Spine},
+	year =     {1989},
+	volume =   {14},
+	pages =    {1012-1019},
 	}
 
+@Article{Keller:1993,
+	author =  { Keller, T. S. and Ziv, I., Moeljanto, E. and Spengler, D. },
+	title =    { Interdependence of lumbar disc and subdiscal bone properties: a report of the normal and degenerated spine},
+	journal =      {Journal of spinal disorders},
+	year =     {1993},
+	volume =   {6},
+	pages =    {106-113},
+}
 
   @Article{CC21,
 	author =   {Cowin, Sthepen },
@@ -42,6 +82,14 @@
 	year =     {2001},
 	volume =   {1},
 	pages =    {4-5},
+}
+  @Article{Hamed:2012,
+	author =   {Hamed, Elham and Jasiuk, Iwona and Yoo, Andrew },
+	title =    {Multi-scale modelling of elastic moduli of trabecular bone},
+	journal =      {Soc. Interface.},
+	year =     {2012},
+	volume =   {9},
+	pages =    {},
 }
 
 
